--- a/css/main.css
+++ b/css/main.css
@@ -69,8 +69,6 @@ Primary use:
   src: url('../fonts/Playlist/Playlist Script.otf'); 
 }
 
-
-
 /*//////////////////////////////////////////////////////////////////
 [ RS PLUGIN ]*/
 /*---------------------------------------------*/
@@ -245,8 +243,9 @@ Primary use:
 }
 
 .l1-txt2 {
-  font-family: Pro Plan Required;
-  font-size: 180px;
+  /* font-family: Monotype Corsiva; */
+   font-family: Monotype Corsiva;
+  font-size: 120px;
   color: #fff;
   line-height: 1.1;
 }
